--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "cot-slack-help-bot",
+  "name": "pofcc-slack-help-bot",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Capability Onboarding",
+  "author": "Possessions Onboarding",
   "license": "MIT",
   "dependencies": {
     "@hmcts/properties-volume": "^1.0.0",
